--- a/index.html
+++ b/index.html
@@ -1,31 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&display=swap" rel="stylesheet"> 
-  
-  <title>Frontend Mentor | Stats preview card component</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <!--<link rel="preconnect" href="https://fonts.googleapis.com">-->
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" type="text/css" href="style.css">
+    
+    <title>Frontend Mentor | Stats preview card component</title>
 
-</head>
-<body>
+  </head>
+    <body>
 
-  Get insights that help your business grow.
+    <div class="main__frame">
+      <div class="picture">
+        <img class="photo" src="images/image-header-mobile.jpg" alt="Fotka na mobilu">
+      </div>
 
-  Discover the benefits of data analytics and make better decisions regarding revenue, customer 
-  experience, and overall efficiency.
+    <div class="info">
+      <h1>
+        Get <span style="color: #aa5cdb"> insights </span> that help your business grow.
+      </h1>
 
-  10k+ companies
-  314 templates
-  12m+ queries
+      <div class="text">
+        Discover the benefits of data analytics and make better decisions regarding revenue, customer 
+        experience, and overall efficiency.
+      </div>
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+      <div class="number">
+        <div class="number__item"><h2>10k+</h2> <p>companies</p></div>
+        <div class="number__item"><h2>314</h2> <p>templates</p></div>
+        <div class="number__item"><h2>12m+</h2> <p>queries</p></div>
+      </div>    
+    </div>
+    
+
+    </div>
+
+    </body>
 </html>
